<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EEEE</string>
    
    <string name="title_textview">Contact Books of Imaginary Friends</string>
    <string name="view_button">View Some Imaginary Friends</string>
    <string name="add_button">Add Some Imaginary Friends</string>
    
    <string name="add_title_hint">Add Name</string>
    <string name="add_Detail_hint">Add Detail</string>
    <string name="add_details">Add Details</string>
    <string name="take_a_picture">Add Image</string>
    <string name="save_contact_entry">Save Entry!</string>
    
    <string name="toast_success">Entry Saved!!</string>
    <string name="toast_not_success">Entry Not Saved!!</string>
    <string name="toast_some_error">No Preview For Homer</string>
    
    <string name="details_textview">Details.....</string>
    
    <string name="instruct">Press Add Details to add more details, Name will be automatically be saved</string>
    
    
    
    <string name="capture_button">Capture!</string>
    
    <string name="action_settings">Settings</string>
    

</resources>
