<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_viewer"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/details_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/add_title_hint" />

            <EditText
                android:id="@+id/detail_edittext"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/add_Detail_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/add_detail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_details" />

                <Button
                    android:id="@+id/take_picture_buton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_a_picture" />

                <Button
                    android:id="@+id/save_contact_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_contact_entry" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="@string/instruct"         
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textColor="@color/BlueViolet"
            android:textSize="30sp" />
        
    </LinearLayout>

</ScrollView>